--- a/TeamProject/Content/Site.css
+++ b/TeamProject/Content/Site.css
@@ -76,3 +76,9 @@
 .timeslot-header .fas:active{
     cursor:wait;
 }
+
+img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
