--- a/TeamProject/Views/Home/About.cshtml
+++ b/TeamProject/Views/Home/About.cshtml
@@ -9,41 +9,41 @@
 <h6>@ViewBag.Message</h6>
 <hr />
 
-<div class="container">
+<div class="container-fluid">
     <div class="row group-item img">
-        <div class="col-4">
-            <figure>
-                <img src="~/Images/About/g_xiros.jpg" alt="No Image" />
-                <figcaption style="width:200px">Team Leader. Team Leader. Team Leader. Team Leader. Team Leader</figcaption>
-            </figure>
+        <div class="col-md-4 col-xl-4 col-sm-4 col-lg-4">
+            <div>
+                <img src="~/Images/About/g_xiros.jpg" alt="No Image" class="rounded-circle shadow-lg center" />
+                <figcaption style="width:200px;margin-left:auto;margin-right:auto;">Team Leader. Team Leader. Team Leader. Team Leader. Team Leader</figcaption>
+            </div>
         </div>
-        <div class="col-4">
-            <figure>
-                <img src="~/Images/About/AltUserImage.jpg" alt="No Image" />
-                <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
-            </figure>
+        <div class="col-md-4 col-xl-4 col-sm-4 col-lg-4">
+            <div>
+                <img src="~/Images/About/g_lymperopoulos.jpg" alt="No Image"  class="rounded-circle shadow-lg center"/>
+                <figcaption style="width:200px;margin-left:auto;margin-right:auto;" class="text-center"><strong>Handsome!</strong></figcaption>
+            </div>
         </div>
-        <div class="col-4">
-            <figure>
-                <img src="~/Images/About/f_boukouvala.jpg" alt="No Image" />
-                <figcaption style="width:200px">Spam your qualities. Spam your qualities here. Spam your qualities here.</figcaption>
-            </figure>
+        <div class="col-md-4 col-xl-4 col-sm-4 col-lg-4">
+            <div>
+                <img src="~/Images/About/f_boukouvala.jpg" alt="No Image" class="rounded-circle shadow-lg center" />
+                <figcaption style="width:200px;margin-left:auto;margin-right:auto;">Spam your qualities. Spam your qualities here. Spam your qualities here.</figcaption>
+            </div>
         </div>
     </div>
     <br />
 
     <div class="row group-item img">
-        <div class="col-4">
-            <figure>
-                <img src="~/Images/About/g_chaniotakis.jpg" alt="No Image" />
-                <figcaption style="width:200px">Database Leader. Took care of the database and reports feature. Also made sure about the correct use of grammar.</figcaption>
-            </figure>
+        <div class="col-6">
+            <div>
+                <img src="~/Images/About/g_chaniotakis.jpg" alt="No Image"  class="rounded-circle center"/>
+                <figcaption style="width:200px;margin-left:auto;margin-right:auto;">Database Leader. Took care of the database and reports feature. Also made sure about the correct use of grammar.</figcaption>
+            </div>
         </div>
-        <div class="col-4">
-            <figure>
-                <img src="~/Images/About/g_kalomalos.jpg" alt="No Image" />
-                <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
-            </figure>
+        <div class="col-6">
+            <div>
+                <img src="~/Images/About/g_kalomalos.jpg" alt="No Image"  class="rounded-circle center"/>
+                <figcaption style="width:200px;margin-left:auto;margin-right:auto;">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+            </div>
         </div>
     </div>
 </div>
