--- a/TeamProject/Views/Courts/Confirmed.cshtml
+++ b/TeamProject/Views/Courts/Confirmed.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Confirmed";
 }
 <div class="container-fluid text-center" style="height:500px;">
-    <div class="">
+    <div>
         <br />
         <br /><br /><br />
         <h2>@Model.User.UserName Thanks for booking.</h2>
@@ -17,6 +17,6 @@
         <span>You can find the Court in @ViewBag.City at @ViewBag.address</span>
         <br />
         <br />
-        <span><strong>Cost :</strong> @Model.Court.Price&euro;</span>
+        <span class="text-center"><strong>Cost :</strong> @Model.Court.Price&euro;</span>
     </div>
 </div>
