Added buttons in form section

--- a/TeamProject/Views/Branches/Nearest.cshtml
+++ b/TeamProject/Views/Branches/Nearest.cshtml
@@ -75,8 +75,10 @@
                     <br />
 
                     <div class="wrap">
-                        <button href="/Courts/index/@branch.Id" class="button" role="button" aria-pressed="true">View details!</button>
-                    </div>
+                        <form action="/Courts/index/@branch.Id">
+                            <button class="button" role="button" aria-pressed="true">View details!</button>
+                        </form>
+                     </div>
                 </div>
             </div>
         </div>
