--- a/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
@@ -74,7 +74,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-secondary"  /> |
             @Html.ActionLink("Back to Branches", "Index")
         </div>
     }
