--- a/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container-fluid">
-    <h2>Details Branch</h2>
+    <h2>Branch Details</h2>
     <div class="row">
         <div class="col-sm">
             <hr />
