--- a/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Braches</h2>
+<h2>Branches</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
