--- a/TeamProject/Areas/Admin/Views/Users/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Edit.cshtml
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
 }
 
-<h2>Edit</h2>
+<h2>Edit User</h2>
 
 
 @using (Html.BeginForm())
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>User</h4>
+    
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
@@ -75,7 +75,7 @@
     <hr />
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-secondary " />
         </div>
     </div>
 </div>
