--- a/TeamProject/Areas/Admin/Views/Bookings/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Index.cshtml
@@ -26,7 +26,7 @@
 
     <main class="col-10">
         <h2 class="bd-title">Bookings for <small class="text-muted" id="court-title"></small></h2>
-        
+
         <!-- Tab Calendar/List View -->
         <ul class="nav nav-tabs tab-selection">
             <li class="nav-item">
@@ -49,7 +49,7 @@
             <h3 id="timeslot-week" class="col text-lg-center"></h3>
             <div id="next-week-btn" class="col-1"><i class="fas fa-arrow-circle-right"></i></div>
         </div>
-        
+
         <!-- Containers -->
         <div id="calendar-container">
             <table class="table timeSlotsBooking">
@@ -81,13 +81,13 @@
         $(document).ready(function () {
             const dateFrom = firstWeekDate();
             const dateTo = dateFrom.clone().add(6, 'days').hour(23).minute(59).second(59);
-
+            const popovers = [];
             $('[data-toggle="popover"]')
                 .popover();
 
             // on booked hover populate popover and show
             $('.timeSlotsBooking tbody')
-                .on('mouseenter mouseleave', 'div[booked]', function () {
+                .on('mouseenter', 'div[booked]', function () {
                     const $popover = $(this);
 
                     // get data from api call if empty
@@ -102,10 +102,20 @@
                                     .attr('data-original-title',
                                         moment(data.BookedAt).format("DD/MM/YYYY HH:mm"))
                                     .popover('show');
+
+                                popovers.push($popover);
                             });
                     } else {
-                        $popover.popover('hide');
+
+                        $popover.popover('show');
+                        popovers.push($popover);
+
                     }
+                }).on('mouseleave', 'div[booked]', function () {
+
+                    $(popovers).popover('hide');
+                    popovers.length = 0;
+
                 });
 
             // on next-week-button clicked add 7 days to FromDate, ToDate inputs and submit form
@@ -122,7 +132,7 @@
                 // update header week period
                 $('#timeslot-week')
                     .text(dateFrom.format("DD/MM/YYYY") + ' - ' +
-                    dateTo.format("DD/MM/YYYY"));
+                        dateTo.format("DD/MM/YYYY"));
 
                 refreshListBookings();
             }
@@ -159,8 +169,8 @@
 
             // ajax call and container updating info
             const containerInfo = {
-                calendar: { updateFunc: getCalendarHtml, apiAction:'GetCourtsForCalendarView'},
-                list: { updateFunc: getListHtml, apiAction:'GetCourtsForListView'}
+                calendar: { updateFunc: getCalendarHtml, apiAction: 'GetCourtsForCalendarView' },
+                list: { updateFunc: getListHtml, apiAction: 'GetCourtsForListView' }
             };
 
             // refresh data and update container based on selected tab using containerInfo
@@ -170,6 +180,10 @@
                 const tabContainer = $('.tab-selection a.active')
                     .attr('update-container');
                 const container = containerInfo[tabContainer];
+
+                // hide popovers
+                $(popovers).popover('hide');
+                popovers.length = 0;
 
                 $.getJSON(`/api/bookings/${container.apiAction}/${courtId}`, {
                     fromDate: dateFrom.clone().utc().format(),
@@ -203,29 +217,29 @@
                         if (bookId > 0) {
                             html +=
                                 `<td>
-                                    <a href="#"
-                                        data-toggle="dropdown"
-                                        aria-haspopup="true"
-                                        aria-expanded="false" booked>
-                                        <div id="${bookId}"
-                                                data-html="true"
-                                                data-placement="left"
-                                                data-toggle="popover"
-                                                title=""
-                                                data-content=""
-                                                booked>
-                                            booked
+                                        <a href="#"
+                                            data-toggle="dropdown"
+                                            aria-haspopup="true"
+                                            aria-expanded="false" booked>
+                                            <div id="${bookId}"
+                                                    data-html="true"
+                                                    data-placement="left"
+                                                    data-toggle="popover"
+                                                    title=""
+                                                    data-content=""
+                                                    booked>
+                                                booked
+                                            </div>
+                                        </a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="/Admin/Bookings/Details/${bookId}">Details</a>
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" href="/Admin/Bookings/Delete/${bookId}">Cancel</a>
                                         </div>
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="/Admin/Bookings/Details/${bookId}">Details</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="/Admin/Bookings/Delete/${bookId}">Cancel</a>
-                                    </div>
-                                </td>`;
+                                    </td>`;
                         } else if (bookId == 0) {
                             html += '<td><a notbooked>-</a></td>';
-                        } else  {
+                        } else {
                             html += '<td></td>';
                         }
                     }
@@ -254,22 +268,22 @@
 
                     html +=
                         `<tr>
-                            <th colspan="5">${day[0]}</th>
-                        </tr>`;
+                                <th colspan="5">${day[0]}</th>
+                            </tr>`;
 
                     for (var booking of day[1]) {
 
                         html +=
                             `<tr>
-                                <td>${moment(booking.BookedAt).format("HH:mm")}</td>
-                                <td>${booking.User.UserName}</td>
-                                <td>${booking.User.Email}</td>
-                                <td>${booking.Duration}</td>
-                                <td>
-                                    <a href="/Admin/Bookings/Details/${booking.Id}">Details</a> |
-                                    <a href="/Admin/Bookings/Delete/${booking.Id}">Delete</a>
-                                </td>
-                            </tr>`;
+                                    <td>${moment(booking.BookedAt).format("HH:mm")}</td>
+                                    <td>${booking.User.UserName}</td>
+                                    <td>${booking.User.Email}</td>
+                                    <td>${booking.Duration}</td>
+                                    <td>
+                                        <a href="/Admin/Bookings/Details/${booking.Id}">Details</a> |
+                                        <a href="/Admin/Bookings/Delete/${booking.Id}">Delete</a>
+                                    </td>
+                                </tr>`;
                     }
 
                 }
